Upgraded to asciidoc 2 and added support for diagrams